syntax="proto3";

package pnocera.fileshare;

option go_package = ".;pb";

import "google/api/annotations.proto";

message UploadFileRequest {
  oneof data {
    UploadFileInfo info = 1;
    bytes chunk_data = 2;
  };
}
 
message UploadFileInfo {
  string file_id = 1; 
  string run_id = 2;
} 
 
message UploadFileResponse {
  string id = 1;
  uint32 size = 2;
  string nonce = 3;
} 

message DownloadFileRequest {
  string id = 1;
  string nonce = 2;
  string run_id = 3;
}

message DownloadFileResponse {
  bytes chunk_data = 1;
}

message DeleteFolderRequest{
  string run_id = 1;
}

message DeleteFolderResponse{
  string message = 1;
}

service FileshareService {
 
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {
    option (google.api.http) = {
      post : "/v1/fileshare/upload_file"
      body : "*"
    };
  };

  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {
    option (google.api.http) = {
      get : "/v1/fileshare/download_file/{id}"
    };
  };

  rpc DeleteFolder(DeleteFolderRequest) returns (DeleteFolderResponse) {
    option (google.api.http) = {
      delete : "/v1/fileshare/delete_folder/{run_id}"
    };
  };
 
}

